tests/pass/Double.java
public class Double {
    public static void main(String[] args) {
        double x = 1.5;
        double y = 2.5;

        x = x*y;
    }
}
