tests/fail/PostfixIncrement.java
package fail;

public class PostfixIncrement {
    public static void main (String[] args){
        System.out.println(++'a');
    }
}